# hive-inference

./: .gitignore  Cargo.toml  README.md
config/: swarm.toml
crates/hive-core/: Cargo.toml
crates/hive-core/src/: coordinator.rs  identity.rs  inference.rs  lib.rs  logger.rs  network.rs  proof.rs  recovery.rs  replay_guard.rs  types.rs
crates/hive-node/: Cargo.toml
crates/hive-node/src/: main.rs  ws_server.rs
dashboard/: index.html  package.json  pnpm-lock.yaml
dashboard/src/: App.svelte
dashboard/src/lib/: ws.js
docs/: index.html
scripts/: demo.sh  gen_keys.sh  run_swarm.sh  test_replay.sh
