[package]
name = "hive-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tashi-vertex = { git = "https://github.com/borahanmirzaii/tashi-vertex-rs.git", branch = "fix/message-recv-drop-safety" }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
