[package]
name = "hive-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hive-node"
path = "src/main.rs"

[dependencies]
hive-core = { path = "../hive-core" }
tashi-vertex = { git = "https://github.com/tashigit/tashi-vertex-rs.git" }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
